# trackbert

./: README.md  pyproject.toml  requirements.txt  trackbert.py
classes/: database.py  tracker.py
src/trackbert/: __main__.py  config.dist.ini
src/trackbert/classes/: core.py  database.py  notifier.py  provider.py  tracker.py
src/trackbert/notifiers/: matrix.py  notify_send.py
src/trackbert/providers/: dhl.py  dpd.py  fedex.py  gls.py  keydelivery.py  postat.py
src/trackbert/trackers/: dhl.py  dpd.py  fedex.py  gls.py  keydelivery.py  postat.py
trackers/: base.py  keydelivery.py  postat.py
