[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trackbert"
version = "0.3.0-dev"
authors = [{ name = "Kumi Mitterer", email = "trackbert@kumi.email" }]
description = "Python application tracking your shipments"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pykeydelivery >= 0.9.1",
  "postat",
  "glsapi",
  "fedextrack",
  "dhltrack",
  "dpdtrack",
  "sqlalchemy",
  "alembic",
  "python-dateutil",
  "tabulate",
]

[project.urls]
"Homepage" = "https://git.private.coffee/kumi/trackbert"
"Bug Tracker" = "https://git.private.coffee/kumi/trackbert/issues"
"Source Code" = "https://git.private.coffee/kumi/trackbert"

[project.scripts]
trackbert = "trackbert.__main__:main"
